# pykaleidoscope

./: .gitignore  README.md  pyproject.toml
grammar/: Kaleidoscope.g4  Kaleidoscope.interp  KaleidoscopeLexer.interp  KaleidoscopeLexer.py  KaleidoscopeLexer.tokens  KaleidoscopeListener.py  KaleidoscopeParser.py  KaleidoscopeVisitor.py
kaleidoscope/: ast.py  ast_visitor.py  code_gen.py  evaluator.py  parser.py
kaleidoscope/tests/: test_evaluator.py  test_parser.py
